force-app/main/default/objects/ssot__ChannelEngagement__dlm/fields/ssot__ConversationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConversationId__c</fullName>
    <label>Conversation</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConversationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>