force-app/main/default/objects/ssot__ChannelEngagement__dlm/fields/ssot__DataSource__c.field-meta.xml
<CustomField>
    <fullName>ssot__DataSource__c</fullName>
    <label>Data Source</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DataSource</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>