force-app/main/default/objects/ssot__ChannelEngagement__dlm/fields/ssot__InPersonMeetingId__c.field-meta.xml
<CustomField>
    <fullName>ssot__InPersonMeetingId__c</fullName>
    <label>In Person Meeting</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InPersonMeetingId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>