force-app/main/default/objects/ssot__ChannelEngagement__dlm/fields/ssot__MailLetterId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MailLetterId__c</fullName>
    <label>Mail Letter</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MailLetterId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>