force-app/main/default/objects/ssot__ChannelEngagement__dlm/fields/ssot__rel_1716722505343_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716722505343_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChannelEngagement_MarketJourneyActiv_rel</label>
    <referenceTo>ssot__MarketJourneyActivity__dlm</referenceTo>
    <relationshipLabel>ChannelEngagement_MarketJourneyActiv_rel</relationshipLabel>
    <relationshipName>rel_1716722505343_end</relationshipName>
    <type>Lookup</type>
</CustomField>