force-app/main/default/objects/ssot__ChannelEngagement__dlm/fields/ssot__rel_1716722506694_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716722506694_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChannelEngagement_MarketSegmentId_ma_rel</label>
    <referenceTo>ssot__MarketSegment__dlm</referenceTo>
    <relationshipLabel>ChannelEngagement_MarketSegmentId_ma_rel</relationshipLabel>
    <relationshipName>rel_1716722506694_end</relationshipName>
    <type>Lookup</type>
</CustomField>