force-app/main/default/objects/ssot__ChannelEngagement__dlm/fields/ssot__rel_1716722521406_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716722521406_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChannelEngagement_CampaignId_map_Cam_rel</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>ChannelEngagement_CampaignId_map_Cam_rel</relationshipLabel>
    <relationshipName>rel_1716722521406_end</relationshipName>
    <type>Lookup</type>
</CustomField>